daffy/leenet-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: leenet-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "leenet.link"
    - "*.leenet.link"
    port:
      number: 443
      name: leenet-link-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: leenet-link-route53-dns-tls
  - hosts:
    - "leenet.lol"
    - "*.leenet.lol"
    port:
      number: 443
      name: leenet-lol-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: leenet-lol-route53-dns-tls
  - hosts:
    - "charlierlee.com"
    - "*.charlierlee.com"
    port:
      number: 443
      name: charlierlee-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: charlierlee-com-route53-dns-tls
  - hosts:
    - "plhhoa.link"
    - "*.plhhoa.link"
    port:
      number: 443
      name: plhhoa-link-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: plhhoa-link-route53-dns-tls
  - hosts:
    - "zambonigirl.com"
    - "*.zambonigirl.com"
    port:
      number: 443
      name: zambonigirl-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: zambonigirl-com-route53-dns-tls
  - hosts:
    - "paintedravendesign.com"
    - "*.paintedravendesign.com"
    port:
      number: 443
      name: paintedravendesign-com-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: paintedravendesign-com-route53-dns-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-plhhoa-link
spec:
  hosts:
  - "plhhoa.link"
  - "www.plhhoa.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: plhhoa
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-leenet.link
spec:
  hosts:
  - "leenet.link"
  - "www.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: csharpauth
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-leenet.lol
spec:
  hosts:
  - "leenet.lol"
  - "www.leenet.lol"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: csharpauth
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-charlierlee.com
spec:
  hosts:
  - "charlierlee.com"
  - "www.charlierlee.com"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    rewrite:
      uri: "/"
      authority: www.amazon.com
    route:
      - destination:
          host: www.amazon.com
          port:
            number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-zambonigirl.com
spec:
  hosts:
  - "zambonigirl.com"
  - "www.zambonigirl.com"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: zambonigirl
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-paintedravendesign.com
spec:
  hosts:
  - "paintedravendesign.com"
  - "www.paintedravendesign.com"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: paintedravendesign
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-marketcap.leenet.link
spec:
  hosts:
  - "marketcap.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: marketcap
          port:
            number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-couchbase.leenet.link
spec:
  hosts:
  - "couchbase.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: my-couchbase
          port:
            number: 8091
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-couchclient.leenet.link
spec:
  hosts:
  - "couchclient.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: couchclient
          port:
            number: 5001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-solar.leenet.link
spec:
  hosts:
  - "solar.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: solar
          port:
            number: 8511
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-movies.leenet.link
spec:
  hosts:
  - "movies.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: movie-recommender
          port:
            number: 2361
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-nextjs-app.leenet.link
spec:
  hosts:
  - "nextjs-app.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: nextjs-app
          port:
            number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-temporal.leenet.link
spec:
  hosts:
  - "temporal.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: temporaltest-web
          port:
            number: 8088
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-chatbot.leenet.link
spec:
  hosts:
  - "chatbot.leenet.link"
  gateways:
  - leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
      - destination:
          host: temporal-adventure-bot
          port:
            number: 3001
